Aggiunge edit & delete

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -46,6 +46,10 @@ form>ul>li {
     height: 2rem;
 }
 
+.showcomic{
+    top: -13rem;
+}
+
 .menuwrapper {
     display: flex;
     justify-content: space-between;
